force-app/main/default/objects/Person__c/Person__c.object-meta.xml
<CustomObject>
    <description>Describe persons</description>
    <label>Person</label>
    <nameField>
        <displayFormat>PER-{0000}</displayFormat>
        <label>Person ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>